fwb: Allow temp overriding state of battery led
Required for devices with popup camera

Change-Id: Ia81cb7392b9f371442ebbdfe7cedef7b05a135ba

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -642,6 +642,9 @@
     <!-- Used to launch a common app (FlipFlap) for devices with flip cover. -->
     <protected-broadcast android:name="android.intent.action.LID_STATE_CHANGED" />
 
+    <!-- Used to force the state of battery led -->
+    <protected-broadcast android:name="android.intent.action.BATTERY_LED_STATE_OVERRIDE" />
+
     <!-- ====================================================================== -->
     <!--                          RUNTIME PERMISSIONS                           -->
     <!-- ====================================================================== -->
